--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,77 @@
+body{
+    background-image: linear-gradient(to right, rgba(37, 4, 223, 0), rgb(68, 124, 209));
+}
 
+
+
+#main{
+    margin-top: 10vh;
+    width: 100vw;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    
+
+}
+
+#open,
+#in-progress,
+#in-review,
+#done {
+    height: fit-content;
+    width: 16vw;
+    /* min-width: 150px; */
+    width: 200px;
+    border-radius: 40px 0px 0px 0px;
+    background-color: rgb(218, 190, 190);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 150px;
+  
+}
+
+#card-header {
+    width: auto;
+    height: 20px;
+    border-radius: 30px 0px 0px 0px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    letter-spacing: 1.5px;
+    
+
+}
+
+#card-contents {
+    width: auto;
+    height: auto;
+    padding: 12px;
+    padding-bottom: 150px;
+}
+
+.delete-button{
+    background-color: rgb(218, 89, 89);
+    border: none;
+    border-radius: 10px;
+    color: azure;
+    padding: 5px;
+    width: 80px;
+    margin-left: 40px
+
+}
+
+.task-heading, .task-body{
+    padding-bottom: 10px;
+    
+
+}
+.task{
+    background-color:lightblue;
+    padding: 5px;
+    border-radius: 15px;
+    
+}
